--- a/WUP_04.rmd
+++ b/WUP_04.rmd
@@ -51,6 +51,14 @@ From the graph graduate dues better than LT High school and High school.
 
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
 
+# Numerical results
+
+```{r}
+favstats(WORDSUM~DEGREE,data=GSSdata)
+```
+
+LT High school is the littlest, followed by High school, Bachelor, Junior College, with Graduate at its best.
+
 ## Inferential Results
 
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
